Included majority of tents.py features

--- a/doc/latex/namespaceteaspoon_1_1_m_l_1_1tents.tex
+++ b/doc/latex/namespaceteaspoon_1_1_m_l_1_1tents.tex
@@ -20,13 +20,16 @@ def \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_ac230b402d60eb765d2c2776027afa
 def \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a19cc99365f3d375bf1ea7535095c15e3}{build\+\_\+G} (Dgms, d=10, delta=1, epsilon=0, max\+Power=1, feature\+Func=\hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a7e54522bba1f674736551ec0522828fa}{tent})
 \begin{DoxyCompactList}\small\item\em Builds matrix of features, where each row corresponds to an input persistence diagram. \end{DoxyCompactList}\item 
 def \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_aedb3c3fb1a8c0faa8bbe358db170f5bb}{Tent\+ML} (Dgms\+DF, labels\+\_\+col=\textquotesingle{}training\+Label\textquotesingle{}, dgm\+\_\+col=\textquotesingle{}Dgm1\textquotesingle{}, params=None)
-\begin{DoxyCompactList}\small\item\em Main function to run ML with tents on persistence diagrams. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Main function to run ML with tents on persistence diagrams. \end{DoxyCompactList}\item 
+def \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a90cc7e8be9f3e13ef4528d1239fda660}{get\+Percent\+Score} (Dgms\+DF, labels\+\_\+col=\textquotesingle{}training\+Label\textquotesingle{}, dgm\+\_\+col=\textquotesingle{}Dgm1\textquotesingle{}, params=\hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket}{Parameter\+Bucket}())
+\begin{DoxyCompactList}\small\item\em Main testing function for classification or regression methods. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
 Machine learning featurization method. 
 
-If you make use of this code, please cite the following paper\+: J.\+A. Perea, E. Munch, and F. Khasawneh. \char`\"{}\+Approximating Continuous Functions On Persistence Diagrams.\char`\"{} Preprint, 2017. 
+If you make use of this code, please cite the following paper\+:~\newline
+ J.\+A. Perea, E. Munch, and F. Khasawneh. \char`\"{}\+Approximating Continuous Functions On Persistence Diagrams.\char`\"{} Preprint, 2017. 
 
 \subsection{Function Documentation}
 \index{teaspoon\+::\+M\+L\+::tents@{teaspoon\+::\+M\+L\+::tents}!build\+\_\+G@{build\+\_\+G}}
@@ -109,6 +112,48 @@ A numpy ndarray with
 \end{DoxyReturn}
 \begin{DoxyRefDesc}{Todo}
 \item[\hyperlink{todo__todo000001}{Todo}]Check for shape output if return\+Square = True. \end{DoxyRefDesc}
+\index{teaspoon\+::\+M\+L\+::tents@{teaspoon\+::\+M\+L\+::tents}!get\+Percent\+Score@{get\+Percent\+Score}}
+\index{get\+Percent\+Score@{get\+Percent\+Score}!teaspoon\+::\+M\+L\+::tents@{teaspoon\+::\+M\+L\+::tents}}
+\subsubsection[{\texorpdfstring{get\+Percent\+Score(\+Dgms\+D\+F, labels\+\_\+col=\textquotesingle{}training\+Label\textquotesingle{}, dgm\+\_\+col=\textquotesingle{}\+Dgm1\textquotesingle{}, params=\+Parameter\+Bucket())}{getPercentScore(DgmsDF, labels_col='trainingLabel', dgm_col='Dgm1', params=ParameterBucket())}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+M\+L.\+tents.\+get\+Percent\+Score (
+\begin{DoxyParamCaption}
+\item[{}]{Dgms\+DF, }
+\item[{}]{labels\+\_\+col = {\ttfamily \textquotesingle{}trainingLabel\textquotesingle{}}, }
+\item[{}]{dgm\+\_\+col = {\ttfamily \textquotesingle{}Dgm1\textquotesingle{}}, }
+\item[{}]{params = {\ttfamily {\bf Parameter\+Bucket}()}}
+\end{DoxyParamCaption}
+)}\hypertarget{namespaceteaspoon_1_1_m_l_1_1tents_a90cc7e8be9f3e13ef4528d1239fda660}{}\label{namespaceteaspoon_1_1_m_l_1_1tents_a90cc7e8be9f3e13ef4528d1239fda660}
+
+
+Main testing function for classification or regression methods. 
+
+Does train/test split, creates classifier, and returns score on test.
+
+
+\begin{DoxyParams}{Parameters}
+{\em Dgms\+DF} & A pandas data frame containing, at least, a column of diagrams and a column of labels \\
+\hline
+{\em labels\+\_\+col} & A string. The label for the column in Dgms\+DF containing the training labels. \\
+\hline
+{\em dgm\+\_\+col} & A string or list of strings giving the label for the column containing the diagrams. \\
+\hline
+{\em params} & A class of type \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket}{Parameter\+Bucket} Should store\+:
+\begin{DoxyItemize}
+\item {\bfseries d}\+: An integer, the number of elements for griding up the x and y axis of the diagram. Will result in d$\ast$(d+1) tent functions
+\item {\bfseries delta}, {\bfseries epsilon}\+: Controls location and width of mesh elements for x and y axis of the diagram.
+\item {\bfseries clf\+Class}\+: The class which will be used for classification. Currently tested using {\ttfamily sklearn.\+Ridge\+Classifier\+CV} and {\ttfamily sklearn.\+Ridge\+CV}.
+\item {\bfseries seed}\+: None if we don\textquotesingle{}t want to mess with the seed for the train\+\_\+test\+\_\+split function. Else, pass integer.
+\item {\bfseries test\+\_\+split}\+: The percentage of the data to be reserved for the test part of the train/test split.
+\end{DoxyItemize}\\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+Returned as a dictionary of entries\+:
+\begin{DoxyItemize}
+\item {\bfseries score} The percent correct when predicting on the test set.
+\item {\bfseries Dgms\+DF} The original data frame passed back with a column labeled \textquotesingle{}Prediction\textquotesingle{} added with the predictions gotten for the test set. Data points in the training set will have an entry of NaN
+\item {\bfseries clf} The classifier object. 
+\end{DoxyItemize}
+\end{DoxyReturn}
 \index{teaspoon\+::\+M\+L\+::tents@{teaspoon\+::\+M\+L\+::tents}!tent@{tent}}
 \index{tent@{tent}!teaspoon\+::\+M\+L\+::tents@{teaspoon\+::\+M\+L\+::tents}}
 \subsubsection[{\texorpdfstring{tent(x, y, i, j, delta=1, epsilon=0)}{tent(x, y, i, j, delta=1, epsilon=0)}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+M\+L.\+tents.\+tent (
@@ -153,9 +198,8 @@ $g_{i,j}(x,y)$ where \[g_{i,j}(x,y) = \bigg| 1- \max\left\{ \left|\frac{x}{\delt
 
 Main function to run ML with tents on persistence diagrams. 
 
-Takes data frame Dgms\+DF and specified persistence diagram column labels, computes the G matrix using build\+\_\+G. Does classification using labels from labels\+\_\+col in the data frame. Returns instance of estimator \begin{DoxyWarning}{Warning}
-this is not finished yet!
-\end{DoxyWarning}
+Takes data frame Dgms\+DF and specified persistence diagram column labels, computes the G matrix using build\+\_\+G. Does classification using labels from labels\+\_\+col in the data frame. Returns instance of estimator
+
 
 \begin{DoxyParams}{Parameters}
 {\em Dgms\+DF} & A pandas data frame containing, at least, a column of diagrams and a column of labels \\
