--- a/doc/latex/classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket.tex
+++ b/doc/latex/classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket.tex
@@ -7,4 +7,103 @@ A class for storing all of the chosen parameters for a data frame and computatio
 
 
 
-Inheritance diagram for teaspoon.\+M\+L.\+tents.\+Parameter\+Bucket\+:
+Inheritance diagram for teaspoon.\+M\+L.\+tents.\+Parameter\+Bucket\+:\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=226pt]{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket__inherit__graph}
+\end{center}
+\end{figure}
+
+
+Collaboration diagram for teaspoon.\+M\+L.\+tents.\+Parameter\+Bucket\+:\nopagebreak
+\begin{figure}[H]
+\begin{center}
+\leavevmode
+\includegraphics[width=226pt]{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket__coll__graph}
+\end{center}
+\end{figure}
+\subsection*{Public Member Functions}
+\begin{DoxyCompactItemize}
+\item 
+def \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a3134297e20272c91ac6ab54a92efb6e5}{\+\_\+\+\_\+init\+\_\+\+\_\+} (self, description=\textquotesingle{}\textquotesingle{}, d=10, delta=1, epsilon=0, max\+Power=1, clf\+Class=Ridge\+Classifier\+CV, seed=None, test\+\_\+size=.\+33)
+\begin{DoxyCompactList}\small\item\em Creates a new \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket}{Parameter\+Bucket} object. \end{DoxyCompactList}\item 
+def \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a39e9d1148208dce4a8dec9354afb789d}{\+\_\+\+\_\+str\+\_\+\+\_\+} (self)\hypertarget{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a39e9d1148208dce4a8dec9354afb789d}{}\label{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a39e9d1148208dce4a8dec9354afb789d}
+
+\begin{DoxyCompactList}\small\item\em Nicely prints all currently set values in the \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket}{Parameter\+Bucket}. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\subsection*{Public Attributes}
+\begin{DoxyCompactItemize}
+\item 
+{\bfseries description}\hypertarget{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_aab5e7cf19dc8d00b44243586dc157ae5}{}\label{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_aab5e7cf19dc8d00b44243586dc157ae5}
+
+\item 
+{\bfseries d}\hypertarget{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_aa69a9219e71bf7677b778ab688a82722}{}\label{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_aa69a9219e71bf7677b778ab688a82722}
+
+\item 
+{\bfseries delta}\hypertarget{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a364570816d395fe5e3e13fc4eb9f2bcc}{}\label{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a364570816d395fe5e3e13fc4eb9f2bcc}
+
+\item 
+{\bfseries epsilon}\hypertarget{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_aee2cf8f4bd0d697511d23927be6531fa}{}\label{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_aee2cf8f4bd0d697511d23927be6531fa}
+
+\item 
+{\bfseries max\+Power}\hypertarget{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a40d7ea4c52a9b9751903c8c392233370}{}\label{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a40d7ea4c52a9b9751903c8c392233370}
+
+\item 
+{\bfseries clf\+Class}\hypertarget{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a2c0528cb4de976390b1c6495e3a43050}{}\label{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a2c0528cb4de976390b1c6495e3a43050}
+
+\item 
+{\bfseries seed}\hypertarget{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a0da392dadd9c38cf0fd09fae278aee35}{}\label{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a0da392dadd9c38cf0fd09fae278aee35}
+
+\item 
+{\bfseries test\+\_\+size}\hypertarget{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a6702b903295c0a0e86888783b3273972}{}\label{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a6702b903295c0a0e86888783b3273972}
+
+\end{DoxyCompactItemize}
+
+
+\subsection{Detailed Description}
+A class for storing all of the chosen parameters for a data frame and computation of ML. 
+
+\subsection{Constructor \& Destructor Documentation}
+\index{teaspoon\+::\+M\+L\+::tents\+::\+Parameter\+Bucket@{teaspoon\+::\+M\+L\+::tents\+::\+Parameter\+Bucket}!\+\_\+\+\_\+init\+\_\+\+\_\+@{\+\_\+\+\_\+init\+\_\+\+\_\+}}
+\index{\+\_\+\+\_\+init\+\_\+\+\_\+@{\+\_\+\+\_\+init\+\_\+\+\_\+}!teaspoon\+::\+M\+L\+::tents\+::\+Parameter\+Bucket@{teaspoon\+::\+M\+L\+::tents\+::\+Parameter\+Bucket}}
+\subsubsection[{\texorpdfstring{\+\_\+\+\_\+init\+\_\+\+\_\+(self, description=\textquotesingle{}\textquotesingle{}, d=10, delta=1, epsilon=0, max\+Power=1, clf\+Class=\+Ridge\+Classifier\+C\+V, seed=\+None, test\+\_\+size=.\+33)}{__init__(self, description='', d=10, delta=1, epsilon=0, maxPower=1, clfClass=RidgeClassifierCV, seed=None, test_size=.33)}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+M\+L.\+tents.\+Parameter\+Bucket.\+\_\+\+\_\+init\+\_\+\+\_\+ (
+\begin{DoxyParamCaption}
+\item[{}]{self, }
+\item[{}]{description = {\ttfamily \textquotesingle{}\textquotesingle{}}, }
+\item[{}]{d = {\ttfamily 10}, }
+\item[{}]{delta = {\ttfamily 1}, }
+\item[{}]{epsilon = {\ttfamily 0}, }
+\item[{}]{max\+Power = {\ttfamily 1}, }
+\item[{}]{clf\+Class = {\ttfamily RidgeClassifierCV}, }
+\item[{}]{seed = {\ttfamily None}, }
+\item[{}]{test\+\_\+size = {\ttfamily .33}}
+\end{DoxyParamCaption}
+)}\hypertarget{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a3134297e20272c91ac6ab54a92efb6e5}{}\label{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a3134297e20272c91ac6ab54a92efb6e5}
+
+
+Creates a new \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket}{Parameter\+Bucket} object. 
+
+This object is being used to keep track of all the parameters needed for the tents ML featurization.
+
+Parameters that are included in the \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket}{Parameter\+Bucket} initially\+:
+
+
+\begin{DoxyParams}{Parameters}
+{\em description} & A description, has no effect on code. This can be set on initialization. \\
+\hline
+{\em d,delta,epsilon} & The bounding box for the persistence diagram in the (birth, lifetime) coordinates is \mbox{[}0,d $\ast$ delta\mbox{]} x \mbox{[}epsilon, d$\ast$ delta + epsilon\mbox{]}. In the usual coordinates, this creates a parallelogram. \\
+\hline
+{\em max\+Power} & The maximum degree used for the monomial combinations of the tent functions. Testing suggests we usually want this to be 1. Increasing causes large increase in number of features. \\
+\hline
+{\em clf\+Class} & The choice of tool used for classification or regression, passed as the function. This code has been tested using {\ttfamily sklearn} functions {\ttfamily Ridge\+Classifer\+CV} for classification and {\ttfamily Ridge\+CV} for regression. \\
+\hline
+{\em seed} & The seed for the pseudo-\/random number generator. Pass None if you don\textquotesingle{}t want it fixed; otherwise, pass an integer. \\
+\hline
+{\em test\+\_\+size} & A number in $[0,1]$. Gives the percentage of data points to be reserved for the testing set if this is being used for a train/test split experiment. Otherwise, ignored. \\
+\hline
+\end{DoxyParams}
+
+
+The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
+\item 
+teaspoon/\+M\+L/tents.\+py\end{DoxyCompactItemize}
