Added DataFrame set generation code to the MakeData.PointCloud file

--- a/doc/latex/namespaceteaspoon_1_1_m_l_1_1tents.tex
+++ b/doc/latex/namespaceteaspoon_1_1_m_l_1_1tents.tex
@@ -88,7 +88,7 @@ Generates row of features for the given diagram.
 
 
 \begin{DoxyParams}{Parameters}
-{\em Dgms} & A list or pd.\+Series. Length = M. Each entry is an N x 2 numpy array with off diagonal points from the persistence diagram \\
+{\em Dgm} & A list or pd.\+Series. Length = M. Each entry is an N x 2 numpy array with off diagonal points from the persistence diagram \\
 \hline
 {\em d} & An integer, the number of elements for griding up the x and y axis of the diagram. Will result in dx(d+1) tent functions \\
 \hline
