--- a/doc/latex/classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket.tex
+++ b/doc/latex/classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket.tex
@@ -30,7 +30,11 @@ def \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a3134297e2027
 \begin{DoxyCompactList}\small\item\em Creates a new \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket}{Parameter\+Bucket} object. \end{DoxyCompactList}\item 
 def \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a39e9d1148208dce4a8dec9354afb789d}{\+\_\+\+\_\+str\+\_\+\+\_\+} (self)\hypertarget{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a39e9d1148208dce4a8dec9354afb789d}{}\label{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a39e9d1148208dce4a8dec9354afb789d}
 
-\begin{DoxyCompactList}\small\item\em Nicely prints all currently set values in the \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket}{Parameter\+Bucket}. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Nicely prints all currently set values in the \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket}{Parameter\+Bucket}. \end{DoxyCompactList}\item 
+def \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_afbc1ce46c67e2a86a72d93cdcba558ea}{enclose\+Dgms} (self, Dgm\+Series)
+\begin{DoxyCompactList}\small\item\em Tests to see if the parameters enclose the persistence diagrams in the Dgm\+Series. \end{DoxyCompactList}\item 
+def \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a4dd95135123384b08f2e8fccd11e7d27}{choose\+Delta\+Eps\+With\+Padding} (self, Dgms\+Series, pad=0)
+\end{DoxyCompactItemize}
 \subsection*{Public Attributes}
 \begin{DoxyCompactItemize}
 \item 
@@ -102,6 +106,38 @@ Parameters that are included in the \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_
 {\em test\+\_\+size} & A number in $[0,1]$. Gives the percentage of data points to be reserved for the testing set if this is being used for a train/test split experiment. Otherwise, ignored. \\
 \hline
 \end{DoxyParams}
+
+
+\subsection{Member Function Documentation}
+\index{teaspoon\+::\+M\+L\+::tents\+::\+Parameter\+Bucket@{teaspoon\+::\+M\+L\+::tents\+::\+Parameter\+Bucket}!choose\+Delta\+Eps\+With\+Padding@{choose\+Delta\+Eps\+With\+Padding}}
+\index{choose\+Delta\+Eps\+With\+Padding@{choose\+Delta\+Eps\+With\+Padding}!teaspoon\+::\+M\+L\+::tents\+::\+Parameter\+Bucket@{teaspoon\+::\+M\+L\+::tents\+::\+Parameter\+Bucket}}
+\subsubsection[{\texorpdfstring{choose\+Delta\+Eps\+With\+Padding(self, Dgms\+Series, pad=0)}{chooseDeltaEpsWithPadding(self, DgmsSeries, pad=0)}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+M\+L.\+tents.\+Parameter\+Bucket.\+choose\+Delta\+Eps\+With\+Padding (
+\begin{DoxyParamCaption}
+\item[{}]{self, }
+\item[{}]{Dgms\+Series, }
+\item[{}]{pad = {\ttfamily 0}}
+\end{DoxyParamCaption}
+)}\hypertarget{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a4dd95135123384b08f2e8fccd11e7d27}{}\label{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_a4dd95135123384b08f2e8fccd11e7d27}
+\begin{DoxyVerb}DgmsSeries is pd.series
+d is number of grid elements in either direction
+pad is the additional padding outside of the points in the diagrams
+
+Sets the needed delta and epsilon \end{DoxyVerb}
+ \index{teaspoon\+::\+M\+L\+::tents\+::\+Parameter\+Bucket@{teaspoon\+::\+M\+L\+::tents\+::\+Parameter\+Bucket}!enclose\+Dgms@{enclose\+Dgms}}
+\index{enclose\+Dgms@{enclose\+Dgms}!teaspoon\+::\+M\+L\+::tents\+::\+Parameter\+Bucket@{teaspoon\+::\+M\+L\+::tents\+::\+Parameter\+Bucket}}
+\subsubsection[{\texorpdfstring{enclose\+Dgms(self, Dgm\+Series)}{encloseDgms(self, DgmSeries)}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+M\+L.\+tents.\+Parameter\+Bucket.\+enclose\+Dgms (
+\begin{DoxyParamCaption}
+\item[{}]{self, }
+\item[{}]{Dgm\+Series}
+\end{DoxyParamCaption}
+)}\hypertarget{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_afbc1ce46c67e2a86a72d93cdcba558ea}{}\label{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket_afbc1ce46c67e2a86a72d93cdcba558ea}
+
+
+Tests to see if the parameters enclose the persistence diagrams in the Dgm\+Series. 
+
+\begin{DoxyReturn}{Returns}
+boolean 
+\end{DoxyReturn}
 
 
 The documentation for this class was generated from the following file\+:\begin{DoxyCompactItemize}
