--- a/doc/latex/namespaceteaspoon_1_1_m_l_1_1tents.tex
+++ b/doc/latex/namespaceteaspoon_1_1_m_l_1_1tents.tex
@@ -19,6 +19,11 @@ def \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_ac230b402d60eb765d2c2776027afa
 \begin{DoxyCompactList}\small\item\em Generates row of features for the given diagram. \end{DoxyCompactList}\item 
 def \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a19cc99365f3d375bf1ea7535095c15e3}{build\+\_\+G} (Dgms, d=10, delta=1, epsilon=0, max\+Power=1, feature\+Func=\hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a7e54522bba1f674736551ec0522828fa}{tent})
 \begin{DoxyCompactList}\small\item\em Builds matrix of features, where each row corresponds to an input persistence diagram. \end{DoxyCompactList}\item 
+def \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a357bed34ad116c89be89e13f85a70c18}{tent\+Vectorized} (Dgm, params, type=\textquotesingle{}Birth\+Death\textquotesingle{})
+\begin{DoxyCompactList}\small\item\em Vectorized (much faster!) version of the tents function. \end{DoxyCompactList}\item 
+def {\bfseries build\+\_\+\+G\+\_\+\+Vectorized} (Dgm\+Series, params)\hypertarget{namespaceteaspoon_1_1_m_l_1_1tents_aa83ae69092ee206c41154b5d36f7969b}{}\label{namespaceteaspoon_1_1_m_l_1_1tents_aa83ae69092ee206c41154b5d36f7969b}
+
+\item 
 def \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_aedb3c3fb1a8c0faa8bbe358db170f5bb}{Tent\+ML} (Dgms\+DF, labels\+\_\+col=\textquotesingle{}training\+Label\textquotesingle{}, dgm\+\_\+col=\textquotesingle{}Dgm1\textquotesingle{}, params=None)
 \begin{DoxyCompactList}\small\item\em Main function to run ML with tents on persistence diagrams. \end{DoxyCompactList}\item 
 def \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a90cc7e8be9f3e13ef4528d1239fda660}{get\+Percent\+Score} (Dgms\+DF, labels\+\_\+col=\textquotesingle{}training\+Label\textquotesingle{}, dgm\+\_\+col=\textquotesingle{}Dgm1\textquotesingle{}, params=\hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket}{Parameter\+Bucket}())
@@ -218,4 +223,36 @@ Takes data frame Dgms\+DF and specified persistence diagram column labels, compu
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
 The classifier object. Coefficients can be found from clf.\+coef\+\_\+ 
+\end{DoxyReturn}
+\index{teaspoon\+::\+M\+L\+::tents@{teaspoon\+::\+M\+L\+::tents}!tent\+Vectorized@{tent\+Vectorized}}
+\index{tent\+Vectorized@{tent\+Vectorized}!teaspoon\+::\+M\+L\+::tents@{teaspoon\+::\+M\+L\+::tents}}
+\subsubsection[{\texorpdfstring{tent\+Vectorized(\+Dgm, params, type=\textquotesingle{}\+Birth\+Death\textquotesingle{})}{tentVectorized(Dgm, params, type='BirthDeath')}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+M\+L.\+tents.\+tent\+Vectorized (
+\begin{DoxyParamCaption}
+\item[{}]{Dgm, }
+\item[{}]{params, }
+\item[{}]{type = {\ttfamily \textquotesingle{}BirthDeath\textquotesingle{}}}
+\end{DoxyParamCaption}
+)}\hypertarget{namespaceteaspoon_1_1_m_l_1_1tents_a357bed34ad116c89be89e13f85a70c18}{}\label{namespaceteaspoon_1_1_m_l_1_1tents_a357bed34ad116c89be89e13f85a70c18}
+
+
+Vectorized (much faster!) version of the tents function. 
+
+\begin{DoxyWarning}{Warning}
+Returns features in different order than older versions of the code. The coefficients can be returned into square form using {\ttfamily row.\+reshape((d,d+1)).T} 
+\end{DoxyWarning}
+
+\begin{DoxyParams}{Parameters}
+{\em Dgm} & A persistence diagram, given as a \$K  2\$ numpy array \\
+\hline
+{\em params} & An \hyperlink{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket}{tents.\+Parameter\+Bucket} object. Really, we need d, delta, epsilon, and max\+Power from that. \\
+\hline
+{\em type} & This code accepts diagrams either
+\begin{DoxyItemize}
+\item in (birth, death) coordinates, in which case {\ttfamily type = \textquotesingle{}Birth\+Death\textquotesingle{}}, or
+\item in (birth, lifetime) = (birth, death-\/birth) coordinates, in which case {\ttfamily type = \textquotesingle{}Birth\+Lifetime\textquotesingle{}} 
+\end{DoxyItemize}\\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+$\sum_{x,y \in \text{Dgm}}g_{i,j}(x,y)$ where \[g_{i,j}(x,y) = \bigg| 1- \max\left\{ \left|\frac{x}{\delta} - i\right|, \left|\frac{y-x}{\delta} - j\right|\right\} \bigg|_+\] where $| * |_+$ is positive part; equivalently, min of $*$ and 0. 
 \end{DoxyReturn}
